crates/tui/src/snapshots/tui__view__tests__notices_float.snap
---
source: crates/tui/src/view_tests.rs
expression: after
---
                                    Notice 3.              ✕
                                    Notice 2.              ✕
                                    Notice 1.              ✕
▣ completed                         +1 more
                                                 ▄▄▄▄▄▄▄▄▄▄▄
                                                  prompt 4 ▐
                                                 ▀▀▀▀▀▀▀▀▀▀▀
                                                       00:00
▣ completed
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
