crates/tui/src/snapshots/tui__view__tests__prompt_bubble_with_time.snap
---
source: crates/tui/src/view_tests.rs
expression: screen(&app)
---





                                                       ▄▄▄▄▄
                                                        go ▐
                                                       ▀▀▀▀▀
                                                       10:15
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
