crates/tui/src/snapshots/tui__view__tests__search_panel.snap
---
source: crates/tui/src/view_tests.rs
expression: "sized(&mut app, 80, 24)"
---













                                                                  fix the build
                                                                           00:00
                                                                  run the tests
                                                                           00:00
                                                                  Fix the docs
                                                                  and the build
                                                                           00:00
search prompts: fix
Fix the docs and the build
fix the build
> draft
