crates/tui/src/snapshots/tui__view__tests__slash_panel.snap
---
source: crates/tui/src/view_tests.rs
expression: "sized(&mut app, 80, 24)"
---

















/home  Goes home.  command
/handoff [instructions]  Starts a handoff.  command
/help  Opens the key map.  command
/thinking [<level>]  Sets the thinking level, or opens the model picker on it.
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ › /h█
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
