crates/tui/src/snapshots/tui__view__tests__slash_panel_with_the_sessions_commands.snap
---
source: crates/tui/src/view_tests.rs
expression: "sized(&mut app, 80, 24)"
---

















/resume  Opens home at the session list.  command
/reload  Reloads configuration, MCP servers and extensions.  command
/review [base]  Reviews a diff.  template
/refactor  Refactors a module.  skill
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ › /re█
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
