crates/tui/src/snapshots/tui__view__tests__steering_rows_above_the_input.snap
---
source: crates/tui/src/view_tests.rs
expression: screen(&app)
---

                                                      ▄▄▄▄▄
                                                       hi ▐
                                                      ▀▀▀▀▀
                                                      00:00
  • Steering, joins the turn at the next step
  ↳ use the parser  ✕
  ▸ and test it  ✕
  ⌥↑ edit · ⌥↓ next · ⌥x drop · click a row to edit, ✕ to dr
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ > and test it  message · enter amends · ⌥x drops · esc sto
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
