crates/tui/src/snapshots/tui__view__tests__streaming_reply.snap
---
source: crates/tui/src/view_tests.rs
expression: screen(&app)
---








                                                         hi
                                                       00:00
Hel
>
