crates/tui/src/snapshots/tui__view__tests__thought_line.snap
---
source: crates/tui/src/view_tests.rs
expression: before
---







                                                        why
+ Thought: Plan the fix · 22s
Because.
▣ completed · 24s · 340 tokens
>
